Fix T65351: visual glitches when scrolling in popovers